--- a/src/app/publication/publication.component.scss
+++ b/src/app/publication/publication.component.scss
@@ -6,12 +6,14 @@
   padding: 20px;
   box-shadow: #d3d3d3 4px 4px 20px;
   margin: 10px;
+  max-width: 90vw;
 
   video,
   img {
     width: 460px;
     height: 580px;
     object-fit: cover;
+    max-width: 85vw;
   }
 
   video {
